Temp fix for sidebar overlap issue. Remine#1842.

--- a/sgdfrontend/static/scss/_base.scss
+++ b/sgdfrontend/static/scss/_base.scss
@@ -32,3 +32,5 @@ input[type="text"] {
 // global colors to complement those set in foundation
 $tertiary-color: #aeabd3 !default;
 $warning-color: #e6df67 !default;
+
+.fixed { width: auto; }
