--- a/sgdfrontend/static/scss/foundation/components/_magellan.scss
+++ b/sgdfrontend/static/scss/foundation/components/_magellan.scss
@@ -11,7 +11,7 @@ $magellan-padding: 10px !default;
   [data-magellan-expedition] {
     background: $magellan-bg;
     z-index: 50;
-    min-width: 100%;
+    min-width: auto;
     padding: $magellan-padding;
 
     .sub-nav {
